# CompositePrefetcherCacheHierarchy

./: .gitignore  CMakeLists.txt  GHB.h  README.md  REFACTORED_ARCHITECTURE.md  config.txt  function.h  main_cache.h  sim_cache.cc  sim_cache.h
OldShit/: GHB.cpp  GHB.h
README/: architecture.md  build.md  configuration.md  development.md  index.md  papers.md  performance.md  prefetching.md  stats.md
Test_Files/: perl_trace.txt
include/: CacheManager.h  SystemCacheData.h
include/Caches/: BaseCache.h  CacheData.h  LevelCache.h  VictimCache.h
include/Config/: CacheHierarchyParams.h  CacheParams.h  Constants.h  Params.h  PrefetcherParams.h  SystemParams.h
include/Core/: AccessBus.h  BaseCache.h  CacheBlock.h  CacheCollection.h  CacheContainer.h  CacheContainerManager.h  CacheHierarchyManager.h  CacheLRUReplacement.h  CacheManager.h  ControlUnit.h  EWMA.h  EvictionHandler.h  GHB.h  LevelCache.h  MarkovPrefetchStrategy.h  MemoryController.h  NoopPrefetchStrategy.h  PrefetchBuffer.h  PrefetchController.h  Prefetcher.h  PrinterAll.h  SequentialPrefetchStrategy.h  StatisticsManager.h  SuperBlock.h  SuperBlockTracker.h  Types.h  VictimCache.h
include/Interface/: IBlock.h  IBlockCollection.h  IManager.h  IPrefetchStrategy.h  IReplacementPolicy.h
include/Prefetcher/: ControlUnit.h  GHB.h  Prefetcher.h  PrefetcherData.h
include/Utils/: BitUtils.h  VariantUtils.h
src/: BaseCache.cpp  CacheCollection.cpp  CacheContainer.cpp  CacheContainerManager.cpp  CacheManager.cpp  ConfigParser.cpp  ControlUnit.cpp  GHB.cpp  LevelCache.cpp  MemoryController.cpp  PrefetchController.cpp  Prefetcher.cpp  SimCache.cpp  StatisticsManager.cpp  SuperBlockTracker.cpp  VictimCache.cpp  testCheck.cpp
src/Caches/: BaseCache.cpp  LevelCache.cpp  VictimCache.cpp
src/Prefetcher/: ControlUnit.cpp  GHB.cpp  Prefetcher.cpp
tests/: test_config.cpp  test_refactored_architecture.cpp
